--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <!-- Google Maps Script -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUGA9kHLfgtG-GiBmPNkVvtp1QOArJrio"></script>
 </head>
 
 <body>
